[package]
name = "ts-analyzer"
version = "0.2.1"
authors = ["Dominic Grimaldi <dominic.j.grimaldi@gmail.com>"]
edition = "2021"
description = "A simple library for analyzing packets in MPEG/Transport Stream files."
repository = "https://github.com/GrimOutlook/ts-analyzer"
documentation = "https://docs.rs/ts-analyzer"
license = "MIT"
keywords = ["mpeg", "parser", "transport", "stream", "video"]
categories = ["multimedia::video"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
log = { version = "0.4.21", default-features = false, optional = true }
memmem = "0.1.1"

[dev-dependencies]
env_logger = "0.11.3"
test-case = "3.3.1"

[features]
log = ["dep:log"]
