[package]
name = "ts-analyzer"
version = "0.2.1"
edition = "2024"
description = "A simple library for analyzing packets in MPEG/Transport Stream files."
documentation = "https://docs.rs/ts-analyzer"
repository = "https://github.com/GrimOutlook/ts-analyzer"
license = "MIT"
keywords = ["mpeg", "parser", "stream", "transport", "video"]
categories = ["multimedia::video"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
derive_more = { version = "2.1.1", features = ["full"] }
getset = "0.1.6"
log = { version = "0.4.21", default-features = false, optional = true }
memmem = "0.1.1"
thiserror = "2.0.18"

[dev-dependencies]
clap = { version = "4.5.11", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
test-case = "3.3.1"

[features]
log = ["dep:log"]
# TODO: add `tokio` feature that makes all functions async and makes the file reader asyn (e.g. from `tokio::io`)
